--- a/photoweb_project/photometadata/templates/photometadata/base.html
+++ b/photoweb_project/photometadata/templates/photometadata/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-        <h1>Photo Metadata — JSON / XML</h1>
+        <h1>Photo Metadata</h1>
         <nav>
             <ul>
                 <li><a href="{% url 'photometadata:index' %}">Домой</a></li>
